1.0.14 (2016-XX-XX)
  * Added fields setSerializeOutput and getSerializeOutput to RClient4Java
    class.
  * Guard elements of the scalaInterpreter from access by the user through the
    '$' operator. 

1.0.13 (2016-07-07)
  * Added %@% operator for shorthand notation (e.g, "interpreter %@% snippet")
    to conveniently evaluate an expression without the overhead involved in
    returning a result.
  * Added serialize option to scalaInterpreter and intpSettings functions in R
    to control the capturing of console output.  Likewise, added
    serializeOutput field to the RClient class.  Avoiding serialization is
    faster and leads to a better experience.  Dropped the now-redundant quiet
    option.
  * Added support for 'unlimited' nested callbacks when Scala is embedded in R,
    where in practice the amount of nesting is only about a dozen if
    serialize=TRUE (because R runs of out sink resources) but is hundreds of
    levels if serialize=FALSE.
  * Restructured the package hierarchy, most notably moving RClient to
    'org.ddahl.rscala' instead of 'org.ddahl.rscala.callback'.
  * Dropped support for Scala 2.10.
  * Avoid the need to modify the original source of scala.Console object and
    the need to hijack the boot classpath.  The package now uses the standard
    'scala' executable from the Scala binary distribution, without any modified
    code and ugly hacks.
  * Added intpCallback function to facilitate writing callbacks.

1.0.12 (2016-06-03)
  * Fast instantiation of RClient class (which was slow in 1.0.11).

1.0.11 (2016-05-12)
  * Fixed broken URL.
  * Ship R code in JARs so that rscala does not need to be installed when
    embedding R in Scala.  Add the following to your build.sbt file:
    libraryDependencies += "org.ddahl" % "rscala_2.11" % "1.0.11"

1.0.10 (2016-05-11)
  * Uploaded JARs to http://central.sonatype.org/
  * Make sure that rscala package is installed when trying to embed R in Scala.